--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    <h1>cinema</h1> 
    <img id="ima1" src="cinema-1.jpg">
    <img id="ima2" src="movie-theater.jpg">
-   <p><b> cinema...</b></p>
+   <p><b> filmes...</b></p>
    <h2> <a href="https://www.cinemark.com.br/curitiba"></a></h2>
 </body>
 </html>
